--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-  "ownerNumber": "62855xxx@s.whatsapp.net",
-  "botName": "Baby Bot",
-  "ownerName": "Ramlan ID",
-  "footer": "*2022 © BABYBOT*",
+  "ownerNumber": "19094155599@s.whatsapp.net",
+  "botName": "Tobat Bot",
+  "ownerName": "Renaldy",
+  "footer": "*Gunakan Dengan Bijak*",
   "apikey": "BELI ATUH",
   "pathThumb": "./media/logo.jpg",
   "sessionName": "ramlanid",
